	get_symbol_table(), get_trace(void) accessor methods instead direct object
	access

2004-04-21 Borut Razem <borut.razem@siol.net>
	* src/gpsim_interface.h, src/gpsim_time.h, src/processor.cc, src/symbol.cc,
	src/trace.cc: create instances of inline methods by taking theirs address,
	so that they can be accessed from dynamic loadable modules

2004-04-18 Borut Razem <borut.razem@siol.net>
	* src/14bit-registers.h, src/gpsim_interface.h, src/gpsim_time.h,
	src/processor.h, src/symbol.h, src/trace.h: introduced get_interface(),
	get_cycles(), get_active_cpu(), get_symbol_table(), get_trace(void)
	accessor methods
	* config_win32.h.in: defined GPSIM_MAJOR_VERSION, GPSIM_MINOR_VERSION and
	GPSIM_MICRO_VERSION symbols

2004-04-15 Scott Dattalo <scott@dattalo.com>
	* src/14bit-tmrs.cc, src/ioports.cc, src/ioports.h: PORTC's T1OSC input
	can clock TMR1 on some PIC's. I've added some preliminary support for this.

2004-04-14 Scott Dattalo <scott@dattalo.com>
	* gui/gui_break.cc, gui/gui_menu.cc, gui/gui_profile.cc,
	gui/gui_src_asm.cc, gui/gui_src_opcode.cc, gui/gui_stack.cc,
	src/16bit-registers.cc, src/breakpoints.cc,
	src/cod.cc, src/eeprom.cc, src/ioports.cc, src/ioports.h, 
	src/pic-processor.cc, src/processor.cc, src/processor.h,
	src/trace.cc:
	Made the processor's ProgramMemoryAccess class dynamically allocated.
	* src/Makefile.am: ssp.h was not part of the install.

2004-04-14 Scott Dattalo <scott@dattalo.com>
	* src/14bit-tmrs.cc: The TMR2 peripheral failed to properly clear
	its breakpoint whenever it was being turned off.
	*src/modules.h: string.h was not getting included.
	
2004-04-13 Scott Dattalo <scott@dattalo.com>
	* src/breakpoints.cc, src/breakpoints.h: 
	Redesigned breakpoints so that a) they're more object oriented and b) more
	easily extensible.
	* src/interface.cc, src/gpsim_interface.h: Removed the CyclicBreakPoint class
	and moved the functionality it was providing into the gpsimInterface class