@@ -151,13 +151,13 @@ void Switch::create_widget(Switch *sw)
 
 //--------------------------------------------------------------
 // construct
-Module * Switch::construct(const char *new_name=NULL)
+Module * Switch::construct(const char *_new_name=0)
 {
 
 //    cout << " Switch constructor\n";
 
     Switch *switchP = new Switch ;
-    switchP->new_name((char*)new_name);
+    switchP->new_name((char*)_new_name);
     switchP->create_iopin_map();
 
     switchP->create_widget(switchP);
